[gd_scene load_steps=32 format=3 uid="uid://ctesu43nh4d2p"]

[ext_resource type="Script" uid="uid://r4pxkvy40mbq" path="res://Menus/main_menu.gd" id="1_jf8mj"]
[ext_resource type="PackedScene" uid="uid://pp0mltyx22hw" path="res://Menus/settings_menu.tscn" id="2_p3jrs"]
[ext_resource type="Texture2D" uid="uid://bld1ipp6fwdqt" path="res://HDRI/Pastel_Sky.hdr" id="3_at0u2"]
[ext_resource type="Shader" uid="uid://de2vc7d4gh74w" path="res://shaders/Outline.gdshader" id="4_11gta"]
[ext_resource type="PackedScene" uid="uid://cp74r48rxpi4c" path="res://planet_3d.tscn" id="5_vt8vr"]
[ext_resource type="PackedScene" uid="uid://dmq25rgcwlmhp" path="res://bouncepad.tscn" id="6_od3lt"]
[ext_resource type="Script" uid="uid://b5fcr5i58deil" path="res://gravity_fields.gd" id="7_6on4w"]
[ext_resource type="PackedScene" uid="uid://d26gy3iv8nnql" path="res://Pre-Prefab/island.tscn" id="8_w5c1d"]
[ext_resource type="PackedScene" uid="uid://dydw3digqcqp" path="res://Prefab/column.tscn" id="9_jjaja"]
[ext_resource type="PackedScene" uid="uid://8htdm57mtpcp" path="res://Prefab/tree.tscn" id="10_g02jp"]
[ext_resource type="PackedScene" uid="uid://c7a4n02ijxnar" path="res://Prefab/alexander.tscn" id="11_hcb4i"]
[ext_resource type="PackedScene" uid="uid://dmssyvh1rsuue" path="res://Pre-Prefab/foliage01.tscn" id="12_doylv"]
[ext_resource type="PackedScene" uid="uid://xkn5mo4pwuke" path="res://Models/computer01.glb" id="13_0q06p"]
[ext_resource type="PackedScene" uid="uid://c3xdv5akvunm2" path="res://Prefab/keyboard01.tscn" id="14_u8ak5"]
[ext_resource type="PackedScene" uid="uid://bcc2j8msg2nc4" path="res://Prefab/rocks/rock01.tscn" id="15_exeb3"]
[ext_resource type="PackedScene" uid="uid://vjdd48amu0wf" path="res://Prefab/rocks/rock02.tscn" id="16_4i0ov"]
[ext_resource type="PackedScene" uid="uid://4oyq6ic3hdqw" path="res://Prefab/rocks/rock03.tscn" id="17_jbuwv"]
[ext_resource type="PackedScene" uid="uid://jcuu1bdcjxpq" path="res://Prefab/rocks/rock04.tscn" id="18_afvju"]
[ext_resource type="PackedScene" uid="uid://daad5redscisq" path="res://Prefab/rocks/rock05.tscn" id="19_waawm"]
[ext_resource type="PackedScene" uid="uid://eyeppb0m08dd" path="res://Prefab/rocks/rock06.tscn" id="20_m40k1"]
[ext_resource type="PackedScene" uid="uid://ddupwq5ww55wv" path="res://Prefab/rocks/rock07.tscn" id="21_vjnny"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_606se"]
render_priority = 0
shader = ExtResource("4_11gta")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0
shader_parameter/pixel_size = 4.0

[sub_resource type="QuadMesh" id="QuadMesh_cxdly"]
material = SubResource("ShaderMaterial_606se")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_dsnr4"]
panorama = ExtResource("3_at0u2")

[sub_resource type="Sky" id="Sky_lf0gk"]
sky_material = SubResource("PanoramaSkyMaterial_dsnr4")

[sub_resource type="Environment" id="Environment_cnaw2"]
background_mode = 2
background_energy_multiplier = 0.5
sky = SubResource("Sky_lf0gk")
tonemap_mode = 3
tonemap_exposure = 0.83
tonemap_white = 2.35
ssao_enabled = true
ssao_radius = 2.0
ssao_ao_channel_affect = 0.85
ssil_enabled = true
sdfgi_bounce_feedback = 1.99
glow_enabled = true
glow_levels/2 = 1.97
glow_levels/3 = 7.9
glow_levels/5 = 4.85
glow_levels/6 = 5.95
glow_bloom = 0.25
fog_mode = 1
fog_density = 1.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.811765, 0.678431, 1, 1)
volumetric_fog_emission = Color(1, 0.701961, 0.741176, 1)
volumetric_fog_anisotropy = 0.9
volumetric_fog_length = 78.87
volumetric_fog_detail_spread = 0.5
volumetric_fog_temporal_reprojection_amount = 0.99
adjustment_enabled = true
adjustment_contrast = 0.9
adjustment_saturation = 1.35

[sub_resource type="BoxMesh" id="BoxMesh_dsnr4"]
size = Vector3(1, 50, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_lf0gk"]
points = PackedVector3Array(10, 25, 2.5, -0.5, 25, 2.5, 10, -25, 2.5, 10, 25, -2.5, -0.5, 25, -2.5, -0.5, -25, 2.5, 10, -25, -2.5, -0.5, -25, -2.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_dsnr4"]
points = PackedVector3Array(0.5, 25, 2.5, -0.5, 25, 2.5, 0.5, -25, 2.5, 0.5, 25, -2.5, -0.5, 25, -2.5, -0.5, -25, 2.5, 0.5, -25, -2.5, -0.5, -25, -2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_cnaw2"]
size = Vector3(3.58363, 2.43126, 3.66815)

[sub_resource type="BoxShape3D" id="BoxShape3D_5457m"]
size = Vector3(19.6182, 19.1631, 24.1017)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf8mj")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467708
anchor_top = 0.426852
anchor_right = 0.532292
anchor_bottom = 0.573148
offset_left = 62.0
offset_top = 79.0
offset_right = -62.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.122917
anchor_top = 0.431481
anchor_right = 0.447917
anchor_bottom = 0.612963
metadata/_edit_use_anchors_ = true

[node name="SettingsMenu" parent="MarginContainer" instance=ExtResource("2_p3jrs")]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.101331)
mesh = SubResource("QuadMesh_cxdly")

[node name="test world" type="Node3D" parent="SubViewportContainer/SubViewport/Camera3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/Camera3D/test world"]
environment = SubResource("Environment_cnaw2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/WorldEnvironment"]
transform = Transform3D(-0.566443, -0.433013, 0.701172, -0.04569, 0.866025, 0.497908, -0.822833, 0.25, -0.510338, 0, 70.3795, -34.7456)
light_color = Color(0.81234, 0.73811, 0.693527, 1)
light_energy = 0.5
light_indirect_energy = 0.5
light_bake_mode = 1
shadow_enabled = true

[node name="Planet3D" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("5_vt8vr")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 26.2861, -18.2161, -99.5824)

[node name="Bouncepad" parent="SubViewportContainer/SubViewport/Camera3D/test world/Planet3D" instance=ExtResource("6_od3lt")]
transform = Transform3D(0.758533, -0.651635, 0, 0.651635, 0.758533, 0, 0, 0, 1, -10.1854, 9, 0)
top_level = true
bounce_force = 35.0

[node name="Bouncepad2" parent="SubViewportContainer/SubViewport/Camera3D/test world/Planet3D" instance=ExtResource("6_od3lt")]
transform = Transform3D(0.787301, 0.616569, 0, -0.616569, 0.787301, 0, 0, 0, 1, 9.10145, 9.93842, 0)
top_level = true
bounce_force = 35.0

[node name="Planet3D2" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("5_vt8vr")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -20.7139, -18.2161, -99.5824)

[node name="Bouncepad" parent="SubViewportContainer/SubViewport/Camera3D/test world/Planet3D2" instance=ExtResource("6_od3lt")]
transform = Transform3D(-4.37114e-09, 0.1, 0, -0.1, -4.37114e-09, 0, 0, 0, 0.1, 1, 0, 0)
bounce_force = 35.0

[node name="Flat" type="StaticBody3D" parent="SubViewportContainer/SubViewport/Camera3D/test world"]
transform = Transform3D(-0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 63.2861, 10.7839, -99.5824)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Flat"]
mesh = SubResource("BoxMesh_dsnr4")

[node name="Area3D" type="Area3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Flat/MeshInstance3D" groups=["gravity_fields"]]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, 0, 0)
priority = 1
gravity_space_override = 3
gravity_point_center = Vector3(0.707, -0.707, 0)
gravity_direction = Vector3(0.707, -0.707, 0)
script = ExtResource("7_6on4w")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Flat/MeshInstance3D/Area3D"]
transform = Transform3D(0.704602, -0.704602, 0, 0.704602, 0.704602, 0, 0, 0, 1.99292, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_lf0gk")

[node name="RayCast3D" type="RayCast3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Flat/MeshInstance3D"]
target_position = Vector3(35, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Flat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_dsnr4")

[node name="Planet3D3" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("5_vt8vr")]
transform = Transform3D(0.552711, -0.00205079, -5.30126, -3.99801, 3.49999, -0.418187, 3.48128, 4.01982, 0.361404, -1.14273, 17.7839, -120.582)

[node name="Bouncepad" parent="SubViewportContainer/SubViewport/Camera3D/test world/Planet3D3" instance=ExtResource("6_od3lt")]
transform = Transform3D(-4.37114e-09, 0.1, 0, -0.1, -4.37114e-09, 0, 0, 0, 0.1, 1, 0, 0)
bounce_force = 35.0

[node name="Bouncepad" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("6_od3lt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -58.2808, -13.5781, -98.0137)

[node name="island" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("8_w5c1d")]
transform = Transform3D(-8.56743e-08, 0, -1.96, 0, 1.96, 0, 1.96, 0, -8.56743e-08, -65.5785, -15.1354, -99.5824)

[node name="Area3D" type="Area3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/island" groups=["gravity_fields"]]
transform = Transform3D(1.96, 0, 0, 0, 1.96, 0, 0, 0, 1.96, 0, 0, 0)
gravity_space_override = 3
script = ExtResource("7_6on4w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/island/Area3D"]
transform = Transform3D(1.95988, 0, 2.98428e-13, 0, 1.95988, 0, -2.98428e-13, 0, 1.95988, 0.427846, 2.56334, -0.275953)
shape = SubResource("BoxShape3D_cnaw2")

[node name="column3" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("9_jjaja")]
transform = Transform3D(0.117564, -0.279088, 0.953042, 0.901843, 0.431797, 0.015199, -0.415763, 0.857707, 0.302457, 20.6029, -11.1107, -88.2643)

[node name="tree" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("10_g02jp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -64.1036, -15.1191, -104.783)

[node name="column" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("9_jjaja")]
transform = Transform3D(0.810591, -0.0171618, 0.58536, 0.00817679, 0.999805, 0.0179896, -0.585554, -0.00979587, 0.810574, -68.1927, -13.8524, -90.6171)

[node name="column2" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("9_jjaja")]
transform = Transform3D(1.17258, 0.116558, -0.226885, -0.114435, 1.19433, 0.0221424, 0.227963, 0, 1.17815, -65.1989, -13.9574, -90.3255)

[node name="tree2" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("10_g02jp")]
transform = Transform3D(0.99519, -0.0510524, 0.083611, 0, 0.853478, 0.521129, -0.097965, -0.518622, 0.849373, -19.4963, -10.2401, -104.989)

[node name="tree3" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("10_g02jp")]
transform = Transform3D(0.768094, -0.30516, -0.562948, 0, 0.879142, -0.47656, 0.640338, 0.366043, 0.675263, 21.1538, -7.3073, -91.4166)

[node name="tree4" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("10_g02jp")]
transform = Transform3D(0.869588, 0.311474, 0.383145, 0.0750937, 0.6835, -0.726078, -0.488034, 0.66016, 0.570974, 34.1446, -10.5137, -91.2498)

[node name="alexander" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("11_hcb4i")]
transform = Transform3D(-0.296878, -0.0339663, 0.954311, -0.247819, 0.967867, -0.0426454, -0.922198, -0.249157, -0.295756, -59.2009, -14.0367, -102.026)

[node name="Foliage01" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("12_doylv")]
transform = Transform3D(0.988151, -0.0129468, -0.152937, 0.00573833, 0.998856, -0.0474817, 0.153377, 0.0460414, 0.987095, -64.6884, -11.8703, -91.1892)

[node name="Foliage02" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("12_doylv")]
transform = Transform3D(0.413697, 0, 0.280811, 0, 0.5, 0, -0.280811, 0, 0.413697, -68.2401, -11.1337, -91.5515)

[node name="Gravity" type="Area3D" parent="SubViewportContainer/SubViewport/Camera3D/test world" groups=["gravity_fields"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.7139, -16.2161, -99.5824)
priority = -1
gravity_space_override = 3
script = ExtResource("7_6on4w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Camera3D/test world/Gravity"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.215332, 1.64983, 1.79645)
shape = SubResource("BoxShape3D_5457m")

[node name="CSGBox3D" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Camera3D/test world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -68.4856, -12.4772, -104.925)
use_collision = true
size = Vector3(3.32715, 2.97318, 2.22949)

[node name="computer01" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("13_0q06p")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -67.8101, -9.84978, -105.016)

[node name="Node3D" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("14_u8ak5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -67.802, -10.911, -104.267)

[node name="Rock01" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("15_exeb3")]
transform = Transform3D(4.82963, 0, -1.2941, 0, 5, 0, 1.2941, 0, 4.82963, -63.0378, -13.3482, -105.525)

[node name="Node3D2" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("16_4i0ov")]
transform = Transform3D(5.8983, 1.74039, 3.34381, -1.32652, 6.77042, -1.18396, -3.52851, 0.363958, 6.03466, -65.8585, -13.3318, -106.68)

[node name="Rock03" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("17_jbuwv")]
transform = Transform3D(3.53553, 0, 3.53553, 0, 5, 0, -3.53553, 0, 3.53553, -63.8506, -12.5766, -94.361)

[node name="Rock04" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("18_afvju")]
transform = Transform3D(2.23739, 0, -4.47147, 0, 5, 0, 4.47147, 0, 2.23739, -62.4432, -13.7171, -95.9595)

[node name="Rock05" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("19_waawm")]
transform = Transform3D(-4.33013, 0, -2.5, 0, 5, 0, 2.5, 0, -4.33013, -66.7341, -13.8296, -90.0975)

[node name="Rock06" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("18_afvju")]
transform = Transform3D(-1.81173, 0, -6.76148, 0, 7, 0, 6.76148, 0, -1.81173, -63.435, -13.7309, -96.0991)

[node name="Rock07" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("19_waawm")]
transform = Transform3D(0.942135, 0, -4.91044, 0, 5, 0, 4.91044, 0, 0.942135, -64.8095, -13.7095, -95.9772)

[node name="Rock08" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("20_m40k1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -60.2688, -13.3024, -103.315)

[node name="Rock09" parent="SubViewportContainer/SubViewport/Camera3D/test world" instance=ExtResource("21_vjnny")]
transform = Transform3D(0.368287, 0, 0.929712, 0, 1, 0, -0.929712, 0, 0.368287, -58.2325, -13.3081, -100.133)
